release/istio-manifests.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: onlineboutique-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "onlineboutique.exmple.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: default
spec:
  hosts:
    - "onlineboutique.example.com"
  gateways:
    - onlineboutique-gateway
  http:
  - route:
     - destination:
         host: frontend
         subset: v1
       weight: 50
     - destination:
         host: frontend
         subset: v2
       weight: 50
  
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-rule
spec:
  host: frontend
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
