release/routing-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: onlineboutique-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "onlineboutique.example.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: browser-virtual-service
spec:
  hosts:
  - "onlineboutique.example.com"
  gateways:
  - onlineboutique-gateway
  http:
    - match:
        - headers:
            user-agent:
              regex: '.*Firefox.*'
      route:
      - destination:
          host: frontend.default.svc.cluster.local
          subset: v1
    - match:
        - headers:
            user-agent:
              regex: '.*Chrome.*'
      route:
      - destination:
          host: frontend.default.svc.cluster.local
          subset: v2
  
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-rule
spec:
  host: frontend
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
