release/timout_routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: onlineboutique-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: productcatalogservice
  namespace: default
  spec:
  hosts:
    - productcatalogservice.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: productcatalogservice.default.svc.cluster.local
            subset: v2
      timeout: 3s       

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-rule
spec:
  host: frontend
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
