release/tls_routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: onlineboutique-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: http
      protocol: HTTPS
    tls:
     mode: SIMPLE
     credentialName: frontend-credential    
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - onlineboutique-gateway
  http:
  - route:
     - destination:
         host: frontend
         subset: v1
       weight: 50
     - destination:
         host: frontend
         subset: v2
       weight: 50

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-rule
spec:
  host: frontend
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
